# nboxkrnl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cxbxrkrnl/: .clang-format  Main.cpp  kernel.h  kernel.hpp  main.cpp  ntstatus.h  ntstatus.hpp  types.h  types.hpp
cxbxrkrnl/dbg/: dbg.h  dbg.hpp  debug.cpp
cxbxrkrnl/ex/: ex.cpp  ex.h  ex.hpp  exp_sup.cpp  pool.cpp
cxbxrkrnl/hal/: hal.cpp  halp.h  halp.hpp  interrupt.cpp
cxbxrkrnl/ke/: apc.cpp  bug.cpp  bug_codes.h  bug_codes.hpp  dpc.cpp  irql.cpp  ke.h  ke.hpp  kernel.cpp  semaphore.cpp  thread.cpp  timer.cpp
cxbxrkrnl/ki/: exception.cpp  hw_exp.cpp  hw_exp.h  hw_exp.hpp  init.cpp  ki.cpp  ki.h  ki.hpp  seh.cpp  seh.h  seh.hpp  thread.cpp
cxbxrkrnl/mm/: mi.cpp  mi.h  mi.hpp  mm.cpp  mm.h  mm.hpp
cxbxrkrnl/nt/: services.cpp  zw.hpp
cxbxrkrnl/rtl/: exp_sup.cpp  exp_sup.hpp  rtl.cpp  rtl.h  rtl.hpp
cxbxrkrnl/util/: util.h
cxbxrkrnl/xe/: xe.cpp
import/nanopdclib/functions/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcmp.c  strlen.c  strncmp.c  strncpy.c
import/nanopdclib/include/: float.h  limits.h  stdarg.h  stddef.h  stdint.h  string.h
import/nanopdclib/include/pdclib/: _PDCLIB_internal.h  _PDCLIB_lib_ext1.h
import/nanopdclib/platform/xbox/functions/_PDCLIB/: assert.c
import/nanopdclib/platform/xbox/include/: assert.h
import/nanopdclib/platform/xbox/include/pdclib/: _PDCLIB_config.h
import/nanoprintf/: nanoprintf.h
nboxkrnl/: helpers.hpp  kernel.hpp  kernel_version.hpp.in  main.cpp  ntstatus.hpp  types.hpp  winerror.hpp
nboxkrnl/av/: av.cpp  av.hpp
nboxkrnl/dbg/: dbg.hpp  debug.cpp
nboxkrnl/ex/: event.cpp  ex.cpp  ex.hpp  exp_sup.cpp  mutant.cpp  pool.cpp  rwlock.cpp
nboxkrnl/hal/: hal.cpp  hal.hpp  halp.cpp  halp.hpp  interrupt.cpp
nboxkrnl/io/: fsc.cpp  fsc.hpp  io.cpp  io.hpp  iop.cpp  iop.hpp
nboxkrnl/io/cdrom/: cdrom.cpp  cdrom.hpp  xdvdfs.cpp  xdvdfs.hpp  xiso.cpp  xiso.hpp
nboxkrnl/io/hdd/: fatx.cpp  fatx.hpp  hdd.cpp  hdd.hpp
nboxkrnl/io/raw/: raw.cpp  raw.hpp
nboxkrnl/ke/: apc.cpp  bug.cpp  bug_codes.hpp  device_queue.cpp  dpc.cpp  event.cpp  interrupt.cpp  irql.cpp  ke.hpp  kernel.cpp  mutant.cpp  semaphore.cpp  thread.cpp  thunk.cpp  timer.cpp  wait.cpp
nboxkrnl/ki/: div_exp.cpp  hw_exp.cpp  hw_exp.hpp  init.cpp  ki.cpp  ki.hpp  seh.cpp  seh.hpp
nboxkrnl/mm/: mi.cpp  mi.hpp  mm.cpp  mm.hpp  vad_tree.cpp  vad_tree.hpp
nboxkrnl/nt/: control.cpp  file.cpp  memory.cpp  mutant.cpp  nt.hpp  objects.cpp  services.cpp  zw.hpp
nboxkrnl/ob/: ob.cpp  ob.hpp  obp.cpp  obp.hpp
nboxkrnl/ps/: ps.cpp  ps.hpp  psp.cpp  psp.hpp
nboxkrnl/rtl/: comparison.cpp  error.cpp  exp_sup.cpp  exp_sup.hpp  rtl.cpp  rtl.hpp  string_append.cpp  string_conversion.cpp  string_lowercase.cpp  string_uppercase.cpp  strings.cpp
nboxkrnl/xc/: crypto.cpp  sha.cpp  xc.hpp
nboxkrnl/xe/: xbe.hpp  xe.cpp  xe.hpp
scripts/: gen_git_hash.py
